--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,4 +1,4 @@
-// Global Variables
+// Global Variables/Mixins/Extends
 ////////////////////////////////////
 
 
@@ -11,6 +11,15 @@ $lightGray: #ebeaea;
 $brandOne: #f38020;
 $brandTwo: #faae40;
 $brandThree: #404041;
+
+$green: #00ac46;
+$yellow: #fdc500;
+$red: #dc0000;
+
+%transitions {
+    -webkit-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
 
 
 // Base Styles
@@ -30,7 +39,7 @@ body{
     flex-direction: column;
     height: 100%;
     background-color: $white;
-    color: $black;
+    color: $brandThree;
     font-family: $primaryFont;
     line-height: 1.3;
 }
@@ -39,17 +48,63 @@ body{
     position: relative;
     display: block;
     margin: 0 auto;
-    width: min(84%, 1280px);
-
-    &.wide{
-        width: min(84%, 1640px);
-    }
+    width: min(84%, 1640px);
 
 }
 
 .center{
     text-align: center;
     justify-content: center;}
+
+
+.icon-button{
+    position: relative;
+    padding: 0px;
+    height: 40px;
+    width: 40px;
+    border: initial;
+    background: initial;
+    cursor: pointer;
+    @extend %transitions;
+
+    &:hover{
+        color: $brandOne;
+    }
+
+    &.reverse{
+        color: $brandOne;
+        &:hover{
+            color: $brandThree;
+        }
+    }
+
+    &::before{
+        content: "";
+        font-family: 'Font Awesome 5 Free';
+        font-size: 20px;
+        font-weight: 900;
+    }
+
+    &.complete{
+        &::before{
+            content: "\f00c";
+        }
+    }
+
+    &.edit{
+        &::before{
+            content: "\f044";
+        }
+    }
+
+    &.delete{
+        &::before{
+            content: "\f1f8";
+        }
+    }
+
+}
+
 
 // Header
 ////////////////////////////////////
@@ -89,6 +144,12 @@ header{
 #main{
     flex: 1;
     padding: 40px;
+
+    .inner{
+        margin: 0 auto;
+        width: min(100%, 1220px);
+    }
+
 }
 
 
@@ -104,5 +165,50 @@ header{
     padding: 18px 0px;
     border-top: 1px solid $lightGray;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .priority{
+        height: 20px;
+        width: 20px;
+        border-radius: 100%;
+        border: 2px solid;
+
+        &.low{
+            border-color: $green;
+        }
+
+        &.medium{
+            border-color: $yellow;
+        }
+
+        &.high{
+            border-color: $red;
+        }
+
+
+    }
+
+    .main{
+
+        >*:first-child{
+            margin-top: 0px;
+        }
+
+        >*:last-child{
+            margin-bottom: 0px;
+        }
+
+    }
+
+    p{
+        &.task-title{
+            margin: 0px;
+            font-weight: 700;
+        }
+        &.task-description{
+            margin: 4px 0px 0px;
+        }
+    }
 
 }
