--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -56,8 +56,34 @@ body{
 
 .center{
     text-align: center;
-    justify-content: center;}
+    justify-content: center;
+}
 
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3{
+    margin: 0px 0px 16px;
+    font-weight: 700;
+    line-height: 1.15;
+}
+
+h1,
+.h1{
+    font-size: 40px;
+}
+
+h2,
+.h2{
+    font-size: 32px;
+}
+
+h3,
+.h3{
+    font-size: 26px;
+}
 
 .icon-button{
     position: relative;
