--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -90,6 +90,25 @@ h4,
     font-size: 22px;
 }
 
+.btn{
+    display: inline-block;
+    background-color: $brandTwo;
+    border: initial;
+    border-radius: 6px;
+    color: $brandThree;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+    cursor: pointer;
+    @extend %transitions;
+
+    &:hover{
+        background-color: $brandOne;
+    }
+
+}
+
 .icon-button{
     position: relative;
     padding: 0px;
@@ -334,4 +353,25 @@ header{
 
 .modal-body{
     padding: 12px 16px;
+}
+
+// Forms
+////////////////////////////////////
+
+input[type=text],
+input[type=date],
+select,
+textarea{
+    width: 100%;
+}
+
+.form-group{
+    margin: 0px 0px 12px;
+
+    label{
+        display: block;
+        font-size: 18px;
+        font-weight: 600;
+    }
+
 }
