Style no tasks message

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -261,6 +261,11 @@ header{
     margin: 40px 0px 0px;
 }
 
+.no-tasks{
+    padding: 18px 12px;
+    border-top: 1px solid $lightGray;
+    text-align: center;
+}
 
 .task-item{
     padding: 18px 12px;
